k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopcloud
  labels:
    name: shopcloud
    app.kubernetes.io/managed-by: kubectl
